--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,24 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
 
   <body>
+    <%= render :partial => 'layouts/nav' %>
+    
+    <% if notice %>
+      <div class="alert alert-success">
+        <p class="notice text-center" style="font-size: 20px; padding: 0px; margin: 0px;"><%= notice %></p>
+      </div>
+    <%end%>
+
+    <% if alert %>
+      <div class="alert alert-danger">
+        <p class="notice text-center" style="font-size: 20px; padding: 0px; margin: 0px;"><%= alert %></p>
+      </div>
+    <%end%>
+
     <%= yield %>
   </body>
 </html>
