--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Course</h1>
+<h1 class="text-center">Nuevo curso</h1>
 
 <%= render 'form', course: @course %>
 
-<%= link_to 'Back', courses_path %>
+<div class="text-left">
+    <%= link_to 'Regresar a cursos', courses_path %>
+</div>
