--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,31 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Courses</h1>
+<h1 class="text-center mb-5">Cursos actuales</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>String</th>
-      <th>User</th>
-      <th>Text</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row justify-content-center mt-5">
+  <div class="col-sm-7">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Nombre curso</th>
+          <th>Maestro</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.string %></td>
-        <td><%= course.user_id %></td>
-        <td><%= course.text %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @courses.each do |course| %>
+          <tr>
+            <td><%= course.name %></td>
+            <td><%= course.user.name %></td>
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <td><%= link_to 'Mostrar', course %></td>
+              <td><%= link_to 'Editar', edit_course_path(course) %></td>
+              <td><%= link_to 'Eliminar', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </div>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <br>
-
-<%= link_to 'New Course', new_course_path %>
+<div class="text-right white-text">
+  <%= link_to 'Crear curso', new_course_path, class: "btn btn-primary text-white" %>
+</div>
