--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="<%= courses_path %>">Cursos</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= courses_path %>">Usuarios</a>
+                    </li>
                 </ul>
             <%end%>
 
