--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="<%= courses_path %>">Usuarios</a>
+                        <a class="nav-link" href="<%= users_path %>">Usuarios</a>
                     </li>
                 </ul>
             <%end%>
