--- a/app/views/teacher/home/index.html.erb
+++ b/app/views/teacher/home/index.html.erb
@@ -1,3 +1,8 @@
 <div class="container">
     <h2 class="text-center mt-4">Panel Maestro</h2>
+    <hr>
+
+    <h2>Mis cursos</h2>
+
+    <%= render '/courses/courses', course: @my_courses %>
 </div>
