--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,37 +1,41 @@
-<%= form_with(model: student, local: true) do |form| %>
-  <% if student.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
+<div class="row justify-content-center">
+  <div class="col-sm-7">
+    <div class="card">
+      <div class="card-body">
+          <%= form_with(model: student, local: true) do |form| %>
+            <% if student.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
 
-      <ul>
-        <% student.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+                <ul>
+                  <% student.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="field">
+              <%= form.label :name %>
+              <%= form.text_field :name, class: "form-control" %>
+            </div>
+
+            <div class="field">
+              <%= form.label :email %>
+              <%= form.text_field :email, class: "form-control" %>
+            </div>
+
+            <div class="field">
+              <%= form.label :matricula %>
+              <%= form.text_field :matricula, class: "form-control" %>
+            </div>
+
+            <div class="actions">
+              <%= form.submit class: 'btn btn-success btn-block' %>
+            </div>
+          <% end %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
   </div>
+</div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :matricula %>
-    <%= form.text_field :matricula %>
-  </div>
-
-  <div class="field">
-    <%= form.label :role %>
-    <%= form.number_field :role %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
