--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,33 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Students</h1>
+<h1 class="text-center mt-3 mb-3">Estudiantes</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Matricula</th>
-      <th>Role</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row justify-content-center">
+  <div class="col-sm-7">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Correo</th>
+          <th>Matricula</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <td><%= student.name %></td>
-        <td><%= student.email %></td>
-        <td><%= student.matricula %></td>
-        <td><%= student.role %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @students.each do |student| %>
+          <tr>
+            <td><%= student.name %></td>
+            <td><%= student.email %></td>
+            <td><%= student.matricula %></td>
+            <td><%= link_to 'Show', student %></td>
+            <td><%= link_to 'Edit', edit_student_path(student) %></td>
+            <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <br>
 
-<%= link_to 'New Student', new_student_path %>
+<div class="text-right white-text">
+  <%= link_to 'Registro estudiante', new_student_path, class: "btn btn-primary text-white" %>
+</div>
