--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,24 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @student.name %>
-</p>
+<h1 class="text-center mb-4">Información del Alumno </h1>
 
-<p>
-  <strong>Email:</strong>
-  <%= @student.email %>
-</p>
+<div class="row justify-content-center">
+  <div class="col-sm-8">
+    <div class="card">
+      <div class="card-body">
+          <div class="header">  
+              <%= @student.name %>
+          </div>
+          <p>
+            <strong>Email:</strong>
+            <%= @student.email %>
+          </p>
 
-<p>
-  <strong>Matricula:</strong>
-  <%= @student.matricula %>
-</p>
+          <p>
+            <strong>Matricula:</strong>
+            <%= @student.matricula %>
+          </p>
 
-<p>
-  <strong>Role:</strong>
-  <%= @student.role %>
-</p>
+          <p>
+            <strong>Role:</strong>
+            <%= @student.role %>
+          </p>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'Back', students_path %>
+
+<div class="btn-group text-right">
+<%= link_to 'Editar', edit_student_path(@student),  class: "btn" %> |
+<%= link_to 'Regresar', students_path,  class: "btn" %>
+</div>
