--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -38,7 +38,7 @@
 
             <ul class="navbar-nav ml-auto"> 
                 <% if ! user_signed_in? %>       
-                    <li class="nav-item"><a class="nav-link" href="/users/sign_up">Sign Up</a></li>
+                    <%# <li class="nav-item"><a class="nav-link" href="/users/sign_up">Sign Up</a></li>  %>
                     <li class="nav-item"><a class="nav-link" href="/users/sign_in">Login</a></li>
                 <%else%>
                     <li class="nav-item">
