--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4 mb-4">Crear nuevo usuario</h1>
+<h1 class="text-center mt-4 mb-4">Crear nuevo Estudiante</h1>
 
 <%= render 'form', student: @student %>
 
