--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,6 +18,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="<%= students_path %>">Estudiantes</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= teachers_path %>">Maestros</a>
+                    </li>
                 </ul>
 
                 <ul class="navbar-nav ml-auto"> 
