--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -30,6 +30,14 @@
               <%= form.text_field :matricula, class: "form-control" %>
             </div>
 
+              <div class="field">
+                <%= form.label :password %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
+              </div>
+
             <div class="actions">
               <%= form.submit class: 'btn btn-success btn-block' %>
             </div>
