--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -27,8 +27,16 @@
           </div>
 
           <div class="field">
-            <%= form.label :mail %>
-            <%= form.text_field :mail, class: "form-control" %>
+            <%= form.label :email %>
+            <%= form.text_field :email, class: "form-control" %>
+          </div>
+
+            <div class="field">
+              <%= form.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
           </div>
 
           <div class="actions">
