--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,6 +23,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="<%= teachers_path %>">Maestros</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= schools_path %>">Escuelas</a>
+                    </li>
                 </ul>
                 <%elsif custom_signed_in?.teacher? %>
                     <li class="nav-item">
