--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -17,7 +17,7 @@
 
           <p>
             <strong>Mail:</strong>
-            <%= @teacher.mail %>
+            <%= @teacher.email %>
           </p>
       </div>
     </div>
