--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -1,17 +1,44 @@
-<%= form_with(model: school, local: true) do |form| %>
-  <% if school.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(school.errors.count, "error") %> prohibited this school from being saved:</h2>
+<div class="row justify-content-center">
+  <div class="col-sm-7">
+    <div class="card">
+      <div class="card-body">
+          <%= form_with(model: school, local: true) do |form| %>
+            <% if school.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(school.errors.count, "error") %> prohibited this school from being saved:</h2>
 
-      <ul>
-        <% school.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+                <ul>
+                  <% school.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="field">
+              <%= form.label :name %>
+              <%= form.text_field :name, class: "form-control" %>
+            </div>
+
+            <div class="field">
+              <%= form.label :email %>
+              <%= form.text_field :email, class: "form-control" %>
+            </div>
+
+            <div class="field">
+              <%= form.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
+            </div>
+
+            <div class="actions">
+              <%= form.submit class: 'btn btn-success btn-block' %>
+            </div>
+          <% end %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
-<% end %>
+</div>
+
