--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,25 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Schools</h1>
+<h1 class="text-center mt-4 mb-4">Escuelas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row justify-content-center">
+  <div class="col-sm-7">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Nombre escuela</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @schools.each do |school| %>
-      <tr>
-        <td><%= link_to 'Show', school %></td>
-        <td><%= link_to 'Edit', edit_school_path(school) %></td>
-        <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @schools.each do |school| %>
+          <tr>
+            <td><%= school.name %></td>
+            <td><%= link_to 'Show', school %></td>
+            <td><%= link_to 'Edit', edit_school_path(school) %></td>
+            <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<br>
 
-<%= link_to 'New School', new_school_path %>
+<div class="text-right white-text">
+<%= link_to 'Crear nueva escuela', new_school_path, class: "btn btn-primary text-white" %>
+</div>
