--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -16,9 +16,9 @@
         <% @schools.each do |school| %>
           <tr>
             <td><%= school.name %></td>
-            <td><%= link_to 'Show', school %></td>
-            <td><%= link_to 'Edit', edit_school_path(school) %></td>
-            <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Mostrar', school %></td>
+            <td><%= link_to 'Editar', edit_school_path(school) %></td>
+            <td><%= link_to 'Eliminar', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
