--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -20,9 +20,9 @@
             <td><%= teacher.name %></td>
             <td><%= teacher.matricula %></td>
             <td><%= teacher.email %></td>
-            <td><%= link_to 'Show', teacher %></td>
-            <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-            <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Mostrar', teacher %></td>
+            <td><%= link_to 'Editar', edit_teacher_path(teacher) %></td>
+            <td><%= link_to 'Eliminar', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
