--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,4 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_school_path(@school) %> |
-<%= link_to 'Back', schools_path %>
+<h1 class="text-center mb-4">Información de la escuela </h1>
+
+<div class="row justify-content-center">
+  <div class="col-sm-8">
+    <div class="card">
+      <div class="card-body">
+            <div class="header">
+                <%= @school.name %>
+            </div>
+
+            <p> 
+                <strong>Nombre de la escuela:</strong>
+                <%= @school.name %>
+            </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="btn-group text-right">
+<%= link_to 'Editar', edit_school_path(@school),  class: "btn" %> |
+<%= link_to 'Regresar', schools_path,  class: "btn" %>
+</div>
