--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,10 @@
-<header class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom-light">
+<header class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom-light" style="background-color: #EEEEEE !important">
     <div class="container-fluid">
-        <%= link_to root_path, :style=> 'color:;' do %>
-            <h2>Holinet Education</h2>
-        <%end%>
+        <div class="text-right">
+            <%= link_to root_path  do %>
+                <h2>Holinet Education</h2>
+            <%end%>
+        </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
