small style changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
 
-  <body style="background-color: #EEEEEE !important">
+  <body style="background-color: #F7F7F7 !important">
     <%= render :partial => 'layouts/nav' %>
     
     <% if notice %>
