--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom-light" style="background-color: #EEEEEE !important">
+<header class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom-light" style="background-color: #F7F7F7 !important">
     <div class="container-fluid">
         <div class="text-right">
             <%= link_to root_path  do %>
@@ -47,3 +47,4 @@
         </div>  
     </div>
 </header>
+<hr>
