--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,13 +1,13 @@
 <div class="text-center" style="margin-top: 200px !important;">
     <div class="row justify-content-center">
         <div class="col-sm-8 mb-4">
-            <%= link_to "Log in Alumnos", new_student_session_path , :class => "btn btn-primary px-5 py-5 text-white" %>
+            <%= link_to "Acceso Alumnos", new_student_session_path , :class => "btn btn-primary px-5 py-5 text-white", :style  => "border-radius: 45px !important;" %>
         </div>
         <div class="col-sm-8 mb-4">
-            <%= link_to "Log in Maestros", new_teacher_session_path , :class => "btn btn-primary px-5 py-5 text-white" %>
+            <%= link_to "Acceso Maestros", new_teacher_session_path , :class => "btn btn-primary px-5 py-5 text-white", :style  => "border-radius: 45px !important;" %>
         </div>
         <div class="col-sm-8 mb-4">
-            <%= link_to "Log in Escuelas", new_teacher_session_path , :class => "btn btn-primary px-5 py-5 text-white" %>
+            <%= link_to "Acceso Plantel", new_school_session_path , :class => "btn btn-primary px-5 py-5 text-white", :style  => "border-radius: 45px !important;" %>
         </div>
     </div>
 </div>
