--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -8,7 +8,7 @@
       <thead>
         <tr>
           <th>Nombre escuela</th>
-          <th colspan="3"></th>
+          <th colspan="3" class="text-center">Acciones</th>
         </tr>
       </thead>
 
@@ -16,9 +16,9 @@
         <% @schools.each do |school| %>
           <tr>
             <td><%= school.name %></td>
-            <td><%= link_to 'Mostrar', school %></td>
-            <td><%= link_to 'Editar', edit_school_path(school) %></td>
-            <td><%= link_to 'Eliminar', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Mostrar', school, :class => "btn btn-primary text-white" %></td>
+            <td><%= link_to 'Editar', edit_school_path(school), :class => "btn btn-success text-white" %></td>
+            <td><%= link_to 'Eliminar', school, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger text-white" %></td>
           </tr>
         <% end %>
       </tbody>
