--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -10,7 +10,7 @@
           <th>Nombre</th>
           <th>Correo</th>
           <th>Matricula</th>
-          <th colspan="3"></th>
+          <th colspan="3" class="text-center">Acciones</th>
         </tr>
       </thead>
 
@@ -20,9 +20,9 @@
             <td><%= student.name %></td>
             <td><%= student.email %></td>
             <td><%= student.matricula %></td>
-            <td><%= link_to 'Mostrar', student %></td>
-            <td><%= link_to 'Editar', edit_student_path(student) %></td>
-            <td><%= link_to 'Eliminar', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Mostrar', student, :class => "btn btn-primary text-white" %></td>
+            <td><%= link_to 'Editar', edit_student_path(student), :class => "btn btn-success text-white"  %></td>
+            <td><%= link_to 'Eliminar', student, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger text-white"  %></td>
           </tr>
         <% end %>
       </tbody>
