--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -10,7 +10,7 @@
           <th>Name</th>
           <th>Matricula</th>
           <th>Mail</th>
-          <th colspan="3"></th>
+          <th colspan="3" class="text-center">Acciones</th>
         </tr>
       </thead>
 
@@ -20,9 +20,9 @@
             <td><%= teacher.name %></td>
             <td><%= teacher.matricula %></td>
             <td><%= teacher.email %></td>
-            <td><%= link_to 'Mostrar', teacher %></td>
-            <td><%= link_to 'Editar', edit_teacher_path(teacher) %></td>
-            <td><%= link_to 'Eliminar', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Mostrar', teacher, :class => "btn btn-primary text-white" %></td>
+            <td><%= link_to 'Editar', edit_teacher_path(teacher), :class => "btn btn-success text-white" %></td>
+            <td><%= link_to 'Eliminar', teacher, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger text-white" %></td>
           </tr>
         <% end %>
       </tbody>
