--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,37 +11,39 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarContent">
-            <% if custom_signed_in? %>
-                <% if custom_signed_in?.admin? %>
+            <% if !current_student.nil? %>
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
                         <a class="nav-link" href="<%= courses_path %>">Cursos</a>
                     </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%= students_path %>">Estudiantes</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%= teachers_path %>">Maestros</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%= schools_path %>">Escuelas</a>
-                    </li>
                 </ul>
-                <%elsif custom_signed_in?.teacher? %>
+
+                <ul class="navbar-nav ml-auto"> 
+                    <%= link_to('Logout', destroy_student_session_path, method: :delete, :class => "nav-link") %>        
+                </ul>
+            <%end%>
+
+            <% if !current_teacher.nil? %>
+                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
                         <a class="nav-link" href="<%= courses_path %>">Cursos</a>
                     </li>
-                <%elsif custom_signed_in?.student? %>
-                    <li class="nav-item">
-                        <a class="nav-link">Mis cursos</a>
-                    </li>
-                <%end%>
+                </ul>
 
                 <ul class="navbar-nav ml-auto"> 
-                    <%= link_to('Logout', destroy_user_session_path, method: :delete, :class => "nav-link") %>        
+                    <%= link_to('Logout', destroy_teacher_session_path, method: :delete, :class => "nav-link") %>        
+                </ul>
+            <%end%>
+            
+            <% if !current_school.nil? %>
+                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= courses_path %>">Cursos</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav ml-auto"> 
+                    <%= link_to('Logout', destroy_school_session_path, method: :delete, :class => "nav-link") %>        
                 </ul>
             <%end%>
         </div>  
