--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -40,6 +40,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="<%= courses_path %>">Cursos</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= teachers_path %>">Maestros</a>
+                    </li>
                 </ul>
 
                 <ul class="navbar-nav ml-auto"> 
