--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -21,6 +21,9 @@
           </div>
 
           <div class="field">
+          </div>
+
+          <div class="field">
             <%= form.label :matricula %>
             <%= form.text_field :matricula, class: "form-control" %>
           </div>
