--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,9 +25,7 @@
 
             <% if !current_student.nil? %>
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%= courses_path %>">Cursos</a>
-                    </li>
+                    
                 </ul>
 
                 <ul class="navbar-nav ml-auto"> 
@@ -55,6 +53,22 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="<%= students_path %>">Estudiantes</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= students_path %>">Comentarios</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= students_path %>">Dudas</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= students_path %>">Cuestionarios</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="<%= students_path %>">Registro planteles</a>
                     </li>
                 </ul>
 
