--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,1 +1,5 @@
-Hola estudiante
+<h2 class="text-center">Bienvenido <%= current_student.name %></h2>
+
+<hr>
+
+<p class="text-center">Últimos cursos</p>
