--- a/app/views/schools/home.html.erb
+++ b/app/views/schools/home.html.erb
@@ -1,1 +1,3 @@
-<%= current_school.name %>
+<h2 class="text-center"><%= current_school.name %></h2>
+<div class="mb-5"></div> 
+<p class="text-center">Últimos movimientos</p>
