--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,7 +11,7 @@
           </div>
              <p>
               <strong>Maestro:</strong>
-              <%= @course.user.name %>
+              <%= @course.teacher.name %>
             </p>
             <p>
               <strong>Descripción general del curso:</strong>
