--- a/app/views/courses/_courses.html.erb
+++ b/app/views/courses/_courses.html.erb
@@ -5,6 +5,7 @@
         <tr>
           <th>Nombre curso</th>
           <th>Maestro</th>
+          <th colspan="3" class="text-center">Acciones</th>
         </tr>
       </thead>
 
@@ -12,11 +13,11 @@
         <% @courses.each do |course| %>
           <tr>
             <td><%= course.name %></td>
-            <td><%= course.user.name %></td>
+            <td><%= course.teacher.name %></td>
             <div class="btn-group" role="group" aria-label="Basic example">
-              <td><%= link_to 'Mostrar', course %></td>
-              <td><%= link_to 'Editar', edit_course_path(course) %></td>
-              <td><%= link_to 'Eliminar', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td><%= link_to 'Mostrar', course, :class => "btn btn-primary text-white" %></td>
+              <td><%= link_to 'Editar', edit_course_path(course), :class => "btn btn-success text-white" %></td>
+              <td><%= link_to 'Eliminar', course, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger text-white" %></td>
             </div>
           </tr>
         <% end %>
