--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,21 +20,10 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card mt-5">
       <div class="card-body text-center">
-          <h3 class="text-center">Material del curso</h3>
-          <% if @course.videos %>
-            <% @course.videos.each do |video| %>
-                <%= video.id %> - <%= link_to video.filename, video_path(@course) %>
-                <br>
-            <% end %>
-          <% end %>
+          <%= link_to "Ir al curso", videos_course_url(@course) %>
       </div>
     </div>
   </div>
-</div>
-
-<div class="btn-group text-right">
-  <%= link_to 'Edit', edit_course_path(@course), class: "btn" %>
-  <%= link_to 'Back', courses_path, class: "btn" %>
 </div>
