--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,6 +4,7 @@
             <%= link_to image_tag("logos/logo.png", width: '180'), root_path  %>
         </div>
 
+        <h2 class="text-right" style="width: 100%;">Holinet Education</h2>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
